<resources>
    <string name="Day">D</string>
    <string name="HillaID">Hilla ID</string>
    <string name="MedalAmount">Medal Amount:</string>
    <string name="MedalWall">Medal Wall</string>
    <string name="MedalWallDetail">Medal Details</string>
    <string name="Month">M</string>
    <string name="NotOwned">Not Owned</string>
    <string name="ObtainDate">Obtain Date</string>
    <string name="Obtained">Obtained</string>
    <string name="PasswordFirstSet">New Password</string>
    <string name="SetPassword">Set Hilla Password</string>
    <string name="SetPasswordTip">After setting your password, you can use it to login to Hilla with your Hilla lD</string>
    <string name="Store">Store</string>
    <string name="Year">Y</string>
    <string name="_1988_01_01">1988-01-01</string>
    <string name="_month">%s months</string>
    <string name="a_lot_of_fun_is_waiting_for_you">A lot of fun is waiting for you</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About Us</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="accepted_please_wait">Accepted, please wait</string>
    <string name="account_banned">Your account has been banned for violating rules until %s.</string>
    <string name="account_banned_unti" formatted="false">Your account has been banned for violating rules until %s. Banned reason: %s.</string>
    <string name="account_binding">Account binding</string>
    <string name="account_cancellation">Account cancellation</string>
    <string name="account_deletion_agree_btn">Agree to Cancellation Terms %s</string>
    <string name="account_deletion_agree_tip">I acknowledge and agree to the Cancellation Agreement.</string>
    <string name="account_deletion_tip_1">Dear User,</string>
    <string name="account_deletion_tip_2">We regret your decision to close your account. To protect the security of your account and your property interests, please be sure to read the following before submitting your account closure request:</string>
    <string name="account_deletion_tip_3">"- All information related to your account will be deleted and destroyed, and your friends will no longer be able to contact you.
- Any remaining gold coins, diamonds and other data in your account will be cleared, and any losses arising therefrom shall be borne by the person who initiates the account closure.
- Once the account is closed, its functions cannot be restored. Please operate with caution!"</string>
    <string name="account_deletion_tip_4">Friendly Reminder:</string>
    <string name="account_deletion_tip_5">After submitting the account closure request, if you do not log in to this account within 7 days, the closure will be completed automatically; if you log in to this account during this period, the account will resume normal use.</string>
    <string name="account_deletion_warning">Deleting your account will result in permanent deactivation and cannot be restored, and you will forfeit the following rights, assets, and services.</string>
    <string name="admin_can_audit_join">Can approve members’ requests to join</string>
    <string name="admin_can_audit_quit">Can approve members’ requests to leave</string>
    <string name="admin_can_invite">Can invite others to join</string>
    <string name="admin_can_kickout">Can remove agency members.</string>
    <string name="admin_can_view_agency_salary">Can view agency salaries</string>
    <string name="admin_can_view_member_salary">Can view member salaries</string>
    <string name="anchor_auth_info_tip">To protect your rights, please fill in the following information truthfully and the platform will keep it confidential for you (asterisks are required)</string>
    <string name="auth_self_face_tip">Please upload a photo of yourself that clearly shows your face</string>
    <string name="block">Block</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account">Delete Account</string>
    <string name="done">Done</string>
    <string name="follow">Follow</string>
    <string name="getcode_enterhere">Got a code? Enter it here!</string>
    <string name="gnder">Gender</string>
    <string name="invitation_code">Invitation code</string>
    <string name="mute">Mute</string>
    <string name="off_mic">Off mic</string>
    <string name="rc_cancel">Cancel</string>
    <string name="rc_dialog_destruct_hint">Messages are automatically destroyed after viewing, and replication or forwarding of messages is forbidden. The server does not retain message records</string>
    <string name="rc_dialog_got_it">Got it</string>
    <string name="rc_dialog_item_select_from_album">Select from Album</string>
    <string name="rc_dialog_item_sight">Sight</string>
    <string name="rc_ext_plugin_destruct">Secret Chat</string>
    <string name="report">Report</string>
    <string name="send">Send</string>
    <string name="skip">Skip</string>
    <string name="skip_if_none">skip if none</string>
    <string name="submit">Submit</string>
    <string name="tip_photo_only_use_auth">The photo is only used for real-person verification and not shown to any other users. We will keep it confidential.</string>
    <string name="type_of_certificate">Type of certificate</string>
    <string name="user_id">User ID</string>
    <string name="uses_of_crystals">Uses of diamond</string>
    <string name="uses_of_crystals_desc">Diamonds can be used to purchase store items</string>
    <string name="ways_get_crystals">Ways to get diamond</string>
    <string name="ways_get_crystals_desc">Diamonds can be gained by doing tasks</string>
</resources>