<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.approom.chatapp.common.view.TitleToolBar android:id="@id/toolBar" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:background="@color/dark_95" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constrainedHeight="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/toolBar">
        <com.approom.chatapp.common.view.SettingItemView android:id="@id/adminCanAuditJoin" android:layout_width="match_parent" android:layout_height="wrap_content" app:itemName="@string/admin_can_audit_join" />
        <com.approom.chatapp.common.view.SettingItemView android:id="@id/adminCanAuditQuit" android:layout_width="match_parent" android:layout_height="wrap_content" app:itemName="@string/admin_can_audit_quit" />
        <com.approom.chatapp.common.view.SettingItemView android:id="@id/adminCanInvite" android:layout_width="match_parent" android:layout_height="wrap_content" app:itemName="@string/admin_can_invite" />
        <com.approom.chatapp.common.view.SettingItemView android:id="@id/adminCanViewAgencySalary" android:layout_width="match_parent" android:layout_height="wrap_content" app:itemName="@string/admin_can_view_agency_salary" />
        <com.approom.chatapp.common.view.SettingItemView android:id="@id/adminCanViewMemberSalary" android:layout_width="match_parent" android:layout_height="wrap_content" app:itemName="@string/admin_can_view_member_salary" />
        <com.approom.chatapp.common.view.SettingItemView android:id="@id/adminCanKickOut" android:layout_width="match_parent" android:layout_height="wrap_content" app:itemName="@string/admin_can_kickout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
