<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.approom.chatapp.common.view.TitleToolBar android:id="@id/toolBar" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" app:bar_icImg="@drawable/ic_back" />
    <androidx.core.widget.NestedScrollView android:background="#f9f9f9" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/scrollLiear" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="12.0sp" android:textColor="#fffeb606" android:background="#fff4d8" android:padding="12.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anchor_auth_info_tip" />
            <com.approom.chatapp.view.anchor.AuthTextView android:id="@id/authTextID" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:layout_marginHorizontal="15.0dp" app:laber_str="@string/user_id" app:requerid="true" app:showRightArrow="false" />
            <com.approom.chatapp.view.anchor.AuthTextView android:id="@id/authTextGender" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:layout_marginHorizontal="15.0dp" app:laber_str="@string/gnder" app:requerid="true" app:showRightArrow="false" />
            <com.approom.chatapp.view.anchor.AuthUploadView android:gravity="start|center" android:orientation="vertical" android:id="@id/authPic" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:layout_marginHorizontal="15.0dp" app:full_size="3" app:isvideo="false" app:item_size="1" app:laber_str="@string/auth_self_face_tip" app:requerid="true" app:tip_str="@string/tip_photo_only_use_auth" />
            <com.approom.chatapp.view.anchor.AuthTextView android:id="@id/authIDType" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:layout_marginHorizontal="15.0dp" app:laber_str="@string/type_of_certificate" app:requerid="true" />
            <com.approom.chatapp.view.anchor.AuthIdCardView android:id="@id/authIDCard" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:layout_marginHorizontal="15.0dp" app:requerid="true" />
            <com.hjq.shape.view.ShapeTextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tvSubmit" android:layout_width="match_parent" android:layout_height="50.0dp" android:layout_marginTop="125.0dp" android:layout_marginBottom="66.0dp" android:text="@string/submit" android:textAlignment="center" android:layout_marginHorizontal="30.0dp" app:shape_radius="25.0dp" app:shape_solidGradientEndColor="#3aff92" app:shape_solidGradientStartColor="#00deff" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
