<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.approom.chatapp.common.view.TitleToolBar android:id="@id/toolBar" android:layout_width="match_parent" android:layout_height="wrap_content" app:bar_icImg="@drawable/ic_back" app:bar_titleColor="#333333" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/flSub" android:paddingTop="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="12.0dp" app:layout_constraintBottom_toBottomOf="parent">
        <ImageView android:id="@id/ivAgree" android:layout_width="20.0dp" android:layout_height="20.0dp" android:layout_marginBottom="10.0dp" android:src="@mipmap/ic_check_box_unselect" app:layout_constraintBottom_toTopOf="@id/btnSubmit" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="12.0dp" android:textColor="@color/secondary_text_2" android:id="@id/tvAgreeTitle" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/account_deletion_agree_tip" android:layout_marginStart="4.0dp" app:layout_constraintBottom_toBottomOf="@id/ivAgree" app:layout_constraintStart_toEndOf="@id/ivAgree" app:layout_constraintTop_toTopOf="@id/ivAgree" />
        <androidx.constraintlayout.widget.Group android:id="@id/groupAgree" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="ivAgree,tvAgreeTitle" />
        <com.hjq.shape.view.ShapeTextView android:textSize="18.0dp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnSubmit" android:layout_width="match_parent" android:layout_height="42.0dp" android:layout_marginTop="10.0dp" android:text="@string/delete_account" android:textAlignment="center" android:layout_marginHorizontal="8.0dp" app:layout_constraintBottom_toBottomOf="parent" app:shape_radius="47.0dp" app:shape_solidGradientEndColor="@color/gradient_end_new" app:shape_solidGradientStartColor="@color/gradient_start_new" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView android:background="@color/dark_98" android:layout_width="match_parent" android:layout_height="0.0dp" android:paddingHorizontal="12.0dp" app:layout_constraintBottom_toTopOf="@id/flSub" app:layout_constraintTop_toBottomOf="@id/toolBar">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingVertical="32.0dp">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="42.0dp" android:layout_height="42.0dp" android:layout_marginBottom="12.0dp" android:src="@mipmap/ic_warning" />
            <TextView android:textSize="16.0dp" android:textColor="@color/first_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dp" android:text="@string/account_deletion_warning" />
            <com.hjq.shape.layout.ShapeLinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingHorizontal="10.0dp" android:paddingVertical="12.0dp" app:shape_radius="12.0dp" app:shape_solidColor="@color/white">
                <TextView android:textSize="14.0dp" android:textColor="@color/first_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/account_deletion_tip_1" />
                <TextView android:textSize="14.0dp" android:textColor="@color/secondary_text_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" android:text="@string/account_deletion_tip_2" />
                <TextView android:textSize="14.0dp" android:textColor="@color/first_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/account_deletion_tip_3" />
            </com.hjq.shape.layout.ShapeLinearLayout>
            <TextView android:textSize="14.0dp" android:textColor="@color/secondary_text_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:text="@string/account_deletion_tip_4" />
            <com.hjq.shape.view.ShapeTextView android:textSize="12.0dp" android:textColor="@color/secondary_text_2" android:padding="10.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/account_deletion_tip_5" app:shape_radius="10.0dp" app:shape_solidColor="@color/dark_90" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
