<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@mipmap/all_top_img" android:scaleType="centerCrop" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@color/hilla_light_dark" android:alpha="0.84" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="20.0dp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/inviteCodeTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dp" android:text="@string/invitation_code" android:layout_marginStart="40.0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="14.0dp" android:textColor="@color/white_60" android:id="@id/skipTips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dp" android:text="@string/skip_if_none" app:layout_constraintStart_toStartOf="@id/inviteCodeTitle" app:layout_constraintTop_toBottomOf="@id/inviteCodeTitle" />
    <com.hjq.shape.view.ShapeEditText android:textSize="12.0dp" android:textColor="@color/white" android:textColorHint="@color/white_60" android:id="@id/inviteCodeEt" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:hint="@string/getcode_enterhere" android:textAlignment="viewStart" android:layout_marginHorizontal="40.0dp" app:layout_constraintTop_toBottomOf="@id/skipTips" app:shape_radius="8.0dp" app:shape_solidColor="@color/white_10" />
    <com.hjq.shape.view.ShapeButton android:textSize="18.0dp" android:textColor="@color/white" android:gravity="center" android:id="@id/doneBtn" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="96.0dp" android:text="@string/done" android:layout_marginHorizontal="40.0dp" android:paddingVertical="11.0dp" app:layout_constraintTop_toBottomOf="@id/inviteCodeEt" app:shape_radius="47.0dp" app:shape_solidGradientEndColor="@color/gradient_end_new" app:shape_solidGradientStartColor="@color/gradient_start" />
    <TextView android:textSize="14.0dp" android:textColor="@color/white" android:id="@id/skipBtn" android:padding="10.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip" app:layout_constraintEnd_toEndOf="@id/doneBtn" app:layout_constraintStart_toStartOf="@id/doneBtn" app:layout_constraintTop_toBottomOf="@id/doneBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
