<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="587.0dp" app:shape_radiusInTopLeft="14.0dp" app:shape_radiusInTopRight="14.0dp" app:shape_solidColor="@color/white"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:paddingTop="15.0dp" android:paddingBottom="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="10.0dp">
        <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send" />
        <TextView android:textSize="16.0sp" android:textColor="#ff555555" android:layout_gravity="start|center" android:id="@id/tvCancle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:paddingHorizontal="5.0dp" android:paddingVertical="5.0dp" />
        <TextView android:textSize="16.0sp" android:textColor="#ff00d9c5" android:layout_gravity="end|center" android:id="@id/tvConfirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm" android:paddingHorizontal="5.0dp" android:paddingVertical="5.0dp" />
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerView" android:layout_width="match_parent" android:layout_height="match_parent" />
</com.hjq.shape.layout.ShapeLinearLayout>
